# cmake-snippets

./: .gitignore  README.md
Step1/: CMakeLists.txt  tutorial.cpp
Step2/: CMakeLists.txt  main.cpp
Step2/Math/: CMakeLists.txt  Math.h  sum.cpp
